# s21_finefibo

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/workflows/: test.yml
finefibo/: __init__.py  fibo.py  finefibo.py
tests/: conftest.py  test_fibo.py  test_finefibo.py  test_tests.py
