[metadata]
name = finefibo
version = 0.0.1
author=Nuno Fachada
author_email=nuno.fachada@ulusofona.pt
description = Fine Fibonacci numbers!
long_description = file: README.md, LICENSE
keywords = fibonacci, numbers, recursive
license = MIT
url=https://github.com/fakenmc/finefibo

[options]
packages =
    finefibo
install_requires =
    numpy  # Not really required
    pandas # Not really required

[options.entry_points]
console_scripts =
    pyfibo = finefibo.fibo:run_from_cli

[options.extras_require]
dev =
    pdoc3
    pytest >= 6.0
    coverage
    pytest-cov >= 3.0.0