[metadata]
name = finefibo
version = 0.0.2
author=Nuno Fachada
author_email=nuno.fachada@ulusofona.pt
description = Fine Fibonacci, Pell, Lucas, Jacobsthal numbers!
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = fibonacci, lucas, Jacobsthal, Pell, numbers, recursive
license = MIT
url=https://github.com/fakenmc/finefibo

[options]
packages =
    finefibo
install_requires =

    pytest
    pytest-console-scripts    
    
[options.entry_points]
console_scripts =
    pynum = finefibo.fibo:run_from_cli

[options.extras_require]
dev =
    pdoc3
    pytest >= 6.0
    coverage
    pytest-cov >= 3.0.0